[package]
name = "hexxagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hexxagon"
path = "src/bin.rs"
bench = false

[[bin]]
name = "hexxagon_ai_competition"
path = "src/ai_competition.rs"
bench = false

[dependencies]
ggez = "0.9.3"
rand = "0.8.5"
indicatif = "0.17.7"
itertools = "0.12.0"
game_ai = { path = "../game_ai" }
mcts = { path = "../mcts" }
random_ai = { path = "../random_ai" }
hexxagon_lib = { path = "../hexxagon_lib" }
minimax = { path = "../minimax" }
