[package]
name = "hexxagon_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false


[dependencies]
smallvec = "1.11.2"
rand = "0.8.5"
game_ai = { path = "../game_ai" }
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "hexxagon_benchmark"
harness = false
